--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/image": "^0.17.0",
+    "@astrojs/netlify": "^2.3.0",
+    "@astrojs/prefetch": "^0.2.3",
+    "@astrojs/tailwind": "^3.1.3",
+    "alpinejs": "^3.12.2",
+    "astro": "^2.6.1",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
+    "sharp": "^0.32.1",
+    "tailwindcss": "^3.3.2"
   }
 }
