--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^3.1.3",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.1",
+    "mongodb": "^5.6.0",
     "sharp": "^0.32.1",
     "tailwindcss": "^3.3.2"
   }
