--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.17.0",
     "@astrojs/prefetch": "^0.2.3",
     "@astrojs/tailwind": "^3.1.3",
+    "@types/alpinejs": "^3.7.2",
     "alpinejs": "^3.12.2",
     "astro": "^2.6.1",
     "mongodb": "^5.6.0",
