--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/collapse": "^3.12.3",
     "@astrojs/image": "^0.17.0",
     "@astrojs/prefetch": "^0.2.3",
     "@astrojs/tailwind": "^3.1.3",
