--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.13.3",
     "@astrojs/prefetch": "^0.4.1",
+    "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.5",
     "alpinejs": "^3.13.3",
