--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@alpinejs/collapse": "^3.13.3",
+    "@astrojs/db": "^0.9.1",
     "@astrojs/prefetch": "^0.4.1",
     "@astrojs/sitemap": "^3.1.1",
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.5",
     "alpinejs": "^3.13.3",
-    "astro": "^4.4.8",
+    "astro": "^4.5.8",
     "mongodb": "^6.3.0",
     "tailwindcss": "^3.3.5"
   }
