--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@alpinejs/collapse": "^3.13.3",
-    "@astrojs/db": "^0.9.1",
+    "@alpinejs/collapse": "^3.13.8",
+    "@astrojs/alpinejs": "^0.4.0",
+    "@astrojs/db": "^0.10.4",
     "@astrojs/prefetch": "^0.4.1",
-    "@astrojs/sitemap": "^3.1.1",
+    "@astrojs/sitemap": "^3.1.3",
     "@astrojs/tailwind": "^5.1.0",
-    "@types/alpinejs": "^3.13.5",
-    "alpinejs": "^3.13.3",
-    "astro": "^4.5.8",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.13.8",
+    "astro": "^4.6.2",
     "mongodb": "^6.3.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.3"
   }
 }
