--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.13.8",
-    "astro": "^4.6.2",
-    "mongodb": "^6.3.0",
+    "astro": "4.5.8",
+    "mongodb": "^6.5.0",
     "tailwindcss": "^3.4.3"
   }
 }
