--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
+    "dev": "astro dev --remote",
+    "start": "astro dev --remote",
+    "build": "astro build --remote",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -13,7 +13,6 @@
     "@alpinejs/collapse": "^3.13.8",
     "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/db": "^0.10.4",
-    "@astrojs/prefetch": "^0.4.1",
     "@astrojs/sitemap": "^3.1.3",
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.10",
