--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.1.4",
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.10",
+    "@types/alpinejs__collapse": "^3.13.4",
     "alpinejs": "^3.13.10",
     "astro": "4.5.8",
     "tailwindcss": "^3.4.3"
