--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/alpinejs": "^3.13.10",
     "@types/alpinejs__collapse": "^3.13.4",
     "alpinejs": "^3.13.10",
-    "astro": "4.5.8",
+    "astro": "^4.7.1",
     "tailwindcss": "^3.4.3"
   }
 }
